--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,10 @@
 <project name="JAR File Builder" default="dist" basedir=".">
 
+	<property name="ebean.version" value="2.7.3" />
 	<property name="version" value="1.0.4" />
 	<property name="play.home" value="/usr/local/play" />
 
-	<taskdef name="ebeanEnhance" classname="com.avaje.ebean.enhance.ant.AntEnhanceTask" classpath="${basedir}/lib/ebean-agent.jar" />
+	<taskdef name="ebeanEnhance" classname="com.avaje.ebean.enhance.ant.AntEnhanceTask" classpath="${basedir}/lib/ebean-${ebean.version}-agent.jar" />
 
 	<target name="dist" depends="clean,compile">
 		<jar jarfile="${basedir}/lib/play-ebean.jar" basedir="${basedir}/tmp" />
@@ -11,7 +12,7 @@
 		<mkdir dir="${basedir}/dist" />
 		<zip destfile="${basedir}/dist/ebean-${version}.zip">
 			<fileset dir="${basedir}">
-				<include name="lib/ebean.jar" />
+				<include name="lib/ebean-${ebean.version}.jar" />
 				<include name="lib/play-ebean*.jar" />
 				<include name="src/**" />
 				<include name="ebean-*.zip" />
@@ -33,7 +34,7 @@
 		<javac srcdir="${basedir}/src" destdir="${basedir}/tmp" debug="yes">
 			<classpath>
 				<fileset dir="lib">
-					<include name="ebean.jar" />
+					<include name="ebean-${ebean.version}.jar" />
 				</fileset>
 				<fileset dir="/usr/local/play/framework">
 					<include name="**/*.jar" />
