--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
 	<property name="play.version" value="1.2.4" />
 	<property name="ebean.version" value="2.7.4" />
-	<property name="version" value="1.0.6" />
+	<property name="version" value="1.0.7RC1" />
 	<property name="play.home" value="/usr/local/play-${play.version}" />
 
 	<taskdef name="ebeanEnhance" classname="com.avaje.ebean.enhance.ant.AntEnhanceTask" classpath="${basedir}/lib/ebean-${ebean.version}-agent.jar" />
