--- a/build.xml
+++ b/build.xml
@@ -70,4 +70,71 @@
 		<ebeanEnhance classpath="${play.home}/framework/play-${play.version}.jar" classSource="${basedir}/tmp" packages="play/modules/ebean" transformArgs="transientInternalFields=true;debug=1" />
 	</target>
 
+	<target name="test" depends="dist,test-zencontact,test-yabe" description="run test suite">
+		<antcall target="test-success" />
+	</target>
+
+	<target name="test-zencontact">
+		<antcall target="play-test">
+			<param name="testAppPath" value="${basedir}/samples-and-tests/zencontact"/>
+		</antcall>
+	</target>
+	<target name="test-yabe">
+		<antcall target="play-test">
+			<param name="testAppPath" value="${basedir}/samples-and-tests/yabe"/>
+		</antcall>
+	</target>
+
+	<target name="check-dependencies-file">
+		<available file="${testAppPath}/conf/dependencies.yml" property="dependencies.present"/>
+	</target>
+
+	<target name="do-deps" depends="check-dependencies-file" if="dependencies.present">
+		<delete failonerror="false" includeemptydirs="true">
+			<fileset dir="${testAppPath}/modules" includes="**/*"/>
+		</delete>
+		<exec executable="${play.home}/play" failonerror="false" spawn="false">
+			<arg value="deps"/>
+			<arg value="${testAppPath}"/>
+			<arg value="--sync"/>
+		</exec>
+	</target>
+
+	<target name="play-auto-test">
+		<echo message="play auto-test ${testAppPath} (wait)" />
+		<delete failonerror="false" includeemptydirs="true">
+			<fileset dir="${testAppPath}/logs" includes="**/*"/>
+			<fileset dir="${testAppPath}/precompiled" includes="**/*"/>
+			<fileset dir="${testAppPath}/test-result" includes="**/*"/>
+			<fileset dir="${testAppPath}/tmp" includes="**/*"/>
+		</delete>
+		<exec executable="${play.home}/play" failonerror="true" dir="${testAppPath}">
+			<arg value="auto-test"/>
+		</exec>
+	</target>
+
+	<target name="test-success">
+		<echo message="*****************" />
+		<echo message="All test passed !" />
+		<echo message="*****************" />
+	</target>
+
+	<target name="play-test">
+		<antcall target="do-deps">
+			<param name="testAppPath" value="${testAppPath}"/>
+		</antcall>
+		<antcall target="play-auto-test">
+			<param name="play.path" value="${play.home}"/>
+			<param name="testAppPath" value="${testAppPath}"/>
+		</antcall>
+		<available file="${testAppPath}/test-result/result.passed" property="${testAppPath}testPassed" />
+		<fail message="Last test has failed ! (Check results in file://${testAppPath}/test-result)">
+			<condition>
+				<not>
+					<isset property="${testAppPath}testPassed"/>
+				</not>
+			</condition>
+		</fail>
+	</target>
+
 </project>
