--- a/samples-and-tests/zencontact/conf/dependencies.yml
+++ b/samples-and-tests/zencontact/conf/dependencies.yml
@@ -3,6 +3,9 @@ require:
 
     - play-ebean -> ebean latest.integration
 
+# in case of Java 11
+#    - javax.xml.bind -> jaxb-api 2.3.0
+
 # in case of PostgreSQL
 #    - org.postgresql -> postgresql 42.2.2.jre6: # PostgreSQL 9.6 server is too new for PostgreSQL 9.0 client shipped with Play 1.2.x, and the ".jre6" suffix is required to be compatible with JDK6
 #        force: true
